Fixed layout if mob nav collapsed and then desktop nav is viewed

--- a/src/ui-lib/sass/05-components/03-organisms/00-page-structure/_00-page-header.scss
+++ b/src/ui-lib/sass/05-components/03-organisms/00-page-structure/_00-page-header.scss
@@ -63,6 +63,10 @@ body > header {
     /* stylelint-disable-next-line selector-max-compound-selectors */
     &[aria-pressed='true'] ~ .grav-c-nav-menu {
       display: block;
+
+      @media (min-width: gravy-breakpoint(medium)) {
+        display: flex;
+      }
     }
   }
 
